# libs/api-types/src/lib/api-types.ts
@@ -46,6 +46,14 @@ export type Sentiment = components['schemas']['Sentiment'];
 export type EntityType = components['schemas']['EntityType'];
 export type ActionType = components['schemas']['ActionType'];
 
+// DTOs
+export type IngestEmailsDto = components['schemas']['IngestEmailsDto'];
+export type IngestUserEmailsDto = components['schemas']['IngestUserEmailsDto'];
+export type ProcessEmailDto = components['schemas']['ProcessEmailDto'];
+export type ProcessBatchDto = components['schemas']['ProcessBatchDto'];
+export type EmailIngestionResponse = components['schemas']['EmailIngestionResponse'];
+export type ProcessingStatusResponse = components['schemas']['ProcessingStatusResponse'];
+
 // API utility types
 export type ApiPaths = keyof paths;
 
